--- a/src/styles/components/_collapsible.scss
+++ b/src/styles/components/_collapsible.scss
@@ -9,9 +9,16 @@ div.sam-collapsible div.collapsible-header {
 div.sam-collapsible div.collapsible-header .label {
   color: $color-base;
   font-weight: 700;
+  width: 90%;
+  line-height: 1;
+  margin-bottom: 0;
 }
 div.sam-collapsible div.collapsible-header .expand-hide {
   float: right;
+}
+
+div.sam-collapsible div.collapsible-content{
+  padding: .5rem 1.5rem;
 }
 
 div.sam-collapsible div.collapsible-content.closed {
@@ -19,4 +26,14 @@ div.sam-collapsible div.collapsible-content.closed {
 }
 div.sam-collapsible div.collapsible-content.open {
   display: block;
+}
+
+// Content inside collapsible
+div.sam-collapsible legend{
+  font-size: 1.9rem;
+  line-height: 2rem;
+}
+
+div.sam-collapsible .label-wrapper label{
+  margin-top: 0;
 }
