--- a/src/app/app-components/object-form/object-form.template.html
+++ b/src/app/app-components/object-form/object-form.template.html
@@ -1,7 +1,6 @@
 <form [formGroup] = "mainForm">
-
-
-    <ng-container *ngFor="let item of objectFormData; let i=index;">
+Test: {{ selectedPage }}
+    <div *ngFor="let item of objectFormData; let i=index;" [id]="item.section">
 
       <form-field *ngFor="let field of item.fields; let j=index;"
         [field]="field"
@@ -17,6 +16,7 @@
         <samButton [buttonId]="item.section + '_sc'" [buttonType]="(!mainForm.controls[item.section].valid ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
       </div>
 
-    </ng-container>
+    </div>
+
 
 </form>
