- Verbage fix, duplication from old text and new text

--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -97,9 +97,8 @@
     <section>
       <h3>Deactivate Account</h3>
       <div>
-        Once you deactivate your account, you will not be able to recover any of your account information or permissions.
-        Once you delete your account, you will not be able to recover any of your account information or permissions.<br /><br />
-        Your account will be permanently inaccessible and you will need to re-register to access SAM.gov.
+        Once you deactivate your account, you will not be able to recover any of your account information or permissions. Your account will
+        be permanently inaccessible and you will need to re-register to access SAM.gov.
       </div>
       <samButton [buttonType]="(states.submitted ? 'disabled' : 'secondary')" buttonText="Deactivate Account" (onClick)="confirmDeactivation()"></samButton>
     </section>
