--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -3,7 +3,7 @@
   you may migrate your roles and keep your same permissions. <a routerLink="/profile/migrations" fragment="top">Begin Now</a>.
 </samAlert>
 
-<h2>Reset Password</h2>
+<h2 [innerText]="store.title"></h2>
 <div>
   <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
     <div #formControl>
